java-design-patterns-project/src/main/java/com/farhad/example/designpatterns/factory/bad/VehicleType.java
package com.farhad.example.designpatterns.factory.bad;

public enum VehicleType {
    CAR,
    BUS,
    TRUNK
}
